# MATH5030

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt  run_standalone.py
.github/workflows/: ci.yml  publish.yml
notebooks/: Demo.ipynb  demo.ipynb
results/: benchmark_smoke.csv  numerical_results_quick.csv  numerical_results_surface_quick.csv  replication_report.html
src/bsde_cfft_app/: __init__.py  benchmark_driver.py  cli.py  interactive_menu.py  paths.py  plot_paper_figures.py  replication_pipeline.py  replication_report.py
src/bsde_cfft_sv/: __init__.py  __main__.py  _benchmarks.py  _bsde_cfft_1d.py  _bsde_cfft_2d.py  _core.py  _experiments.py  benchmark_driver.py  cli.py  interactive_menu.py  plot_paper_figures.py  replication_pipeline.py  replication_report.py
src/bsde_cfft_sv/implementation_version_0/: __init__.py
src/bsde_cfft_sv/implementation_version_0/results/: benchmark_smoke.csv  replication_report.html
src/cfft_bsde/: __init__.py  benchmark_driver.py  cli.py  interactive_menu.py  plot_paper_figures.py  replication_pipeline.py  types.py
src/cfft_bsde.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/cfft_bsde/adaptive/: __init__.py  tuning.py
src/cfft_bsde/baselines/: __init__.py  garch_reference.py  heston_reference.py  monte_carlo.py
src/cfft_bsde/benchmarks/: __init__.py  accuracy_runtime.py  scaling.py
src/cfft_bsde/cfft/: __init__.py  core_algorithm.py  gh2025.py  ho2017.py
src/cfft_bsde/models/: __init__.py  base.py  black_scholes.py  garch_diffusion.py  heston.py
src/cfft_bsde/robustness/: __init__.py  sweep.py
src/cfft_bsde/validation/: __init__.py  reproduce.py
src/implementation_version_0/cfft/: __init__.py  core_algorithm.py
src/implementation_version_0/results/: replication_report.html
tests/: test.py  test_bsde_cfft_sv.py
