[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bsde-cfft-sv"
version = "0.0.0"
description = "MATH5030: upstream-style bsde_cfft_sv package, implementation_version_0 core, and bsde_cfft_app course console."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "UNLICENSED" }
authors = [{ name = "qingp" }]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
]

[project.optional-dependencies]
test = ["pytest>=8.0"]
plot = ["matplotlib>=3.8"]

[project.scripts]
bsde-cfft-sv = "bsde_cfft_app.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

# Explicit names so `pip` never picks up build artifacts (e.g. ``*.egg-info``) as packages.
[tool.setuptools.packages.find]
where = ["src"]
include = ["bsde_cfft_sv", "implementation_version_0", "bsde_cfft_app"]
