[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bsde-cfft-sv"
version = "0.0.0"
description = "MATH5030: BSDE-CFFT API stubs aligned with BSDE-CFFT-Method-For-Stochastic-Volatility-Models-main (implementations omitted)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "UNLICENSED" }
authors = [{ name = "qingp" }]
dependencies = ["numpy",  "scipy", "pandas"]

[project.optional-dependencies]
test = ["pytest>=8.0"]
plot = ["matplotlib>=3.8"]
numpy = ["numpy>=1.20.0"]

# No [project.scripts] — course repo has no console app (upstream uses bsde_cfft_sv.cli:main).

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["bsde_cfft_sv"]
