[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bsde-cfft-sv"
version = "0.0.0"
description = "MATH5030: BSDE-CFFT API aligned with BSDE-CFFT-Method-For-Stochastic-Volatility-Models-main."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "UNLICENSED" }
authors = [{ name = "qingp" }]
dependencies = ["numpy", "scipy", "pandas", "pyfeng>=0.3"]

[project.optional-dependencies]
test = ["pytest>=8.0"]
plot = ["matplotlib>=3.8"]
numpy = ["numpy>=1.20.0"]

[project.scripts]
bsde-cfft-sv = "bsde_cfft_sv.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["bsde_cfft_sv"]

[tool.pytest.ini_options]
python_files = ["test.py", "test_*.py", "*_test.py"]
